<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BizC POS</string>
    
    <!-- Login Screen -->
    <string name="welcome_message">Welcome to BizC POS</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="select_user_type">Select User Type</string>
    <string name="user_type_admin">Admin</string>
    <string name="user_type_cashier">Cashier</string>
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_invalid_credentials">Invalid username or password</string>
</resources>